--- a/Amazon_reviews_stats_CClark.ipynb
+++ b/Amazon_reviews_stats_CClark.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Amazon Customer Reviews - Statistical Analysis\n",
+    "# Amazon Customer Reviews - Exploratory Data and Statistical Analysis \n",
     "Springboard Data Science Career Track\n",
     "Capstone 2\n",
     "by Chantel Clark\n",
